--- a/html/index.html
+++ b/html/index.html
@@ -88,7 +88,7 @@
                 <label for="floatingPassword">Ваш пароль</label>
             </div>
 
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Войти</button>
+            <button class="w-100 btn btn-lg btn-dark" type="submit">Войти</button>
         </form>
     </main>
 
