--- a/html/patients.html
+++ b/html/patients.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Палаты - Рабочее место врача</title>
+    <title>Пациенты - Рабочее место врача</title>
     <link type="image/x-icon" rel="shortcut icon" href="../img/favicon.ico" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,11 +15,6 @@
         crossorigin="anonymous"></script>
 
     <style>
-        .card-body {
-            font-size: 2rem;
-            padding: 1rem 2rem;
-        }
-
         .py-3 {
             padding-bottom: 0 !important;
         }
@@ -60,7 +55,8 @@
             <nav aria-label="breadcrumb"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">Палаты</li>
+                    <li class="breadcrumb-item"><a href="wards.html">Палаты</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Палата 3</li>
                 </ol>
             </nav>
             <div style="z-index:3; position:relative;">
@@ -91,45 +87,18 @@
 
     <!--Main content-->
     <main>
-        <section class="py-5 text-center container">
-            <div class="row py-lg-5">
-                <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">Палаты</h1>
-                </div>
-            </div>
-        </section>
-        <div class="position-relative">
-            <div class="position-absolute top-0 start-50 translate-middle-x">
-                <div class="row">
-                    <div class="col-md-auto">
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="col">
                         <div class="card shadow-sm">
                             <div class="card-body">
-                                <span class="card-text">1</span>
-                                <a href="patients.html" class="stretched-link"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-auto">
-                        <div class="card shadow-sm">
-                            <div class="card-body">
-                                <span class="card-text">2</span>
-                                <a href="#" class="stretched-link"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-auto">
-                        <div class="card shadow-sm">
-                            <div class="card-body">
-                                <span class="card-text">3</span>
-                                <a href="#" class="stretched-link"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-auto">
-                        <div class="card shadow-sm">
-                            <div class="card-body">
-                                <span class="card-text">4</span>
-                                <a href="#" class="stretched-link"></a>
+                                <h4 class="card-title">Иванов Петр Михайлович</h4>
+                                <h6 class="card-subtitle mb-2 text-muted">Полных лет: 54</h6>
+                                <h6 class="card-subtitle mb-2 text-muted">Дата поступления: 12.10.2020</h6>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                                <a class="stretched-link" href="#"></a>
                             </div>
                         </div>
                     </div>
