--- a/html/patients.html
+++ b/html/patients.html
@@ -98,7 +98,7 @@
                                 <h6 class="card-subtitle mb-2 text-muted">Дата поступления: 12.10.2020</h6>
                                 <p class="card-text">This is a wider card with supporting text below as a natural
                                     lead-in to additional content.</p>
-                                <a class="stretched-link" href="#"></a>
+                                <a class="stretched-link" href="patient.html"></a>
                             </div>
                         </div>
                     </div>
