--- a/html/patient.html
+++ b/html/patient.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset="utf-8">
@@ -101,6 +101,7 @@
                     <nav class="nav flex-column">
                         <h4 class="nav-link">Иванов Петр Михайлович&nbsp;&nbsp;&nbsp;
                             <a href="#">
+                                <!--Word export-->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                     class="bi bi-file-earmark-word" viewBox="0 0 16 16">
                                     <path
@@ -111,6 +112,7 @@
                             </a>
                         </h4>
                         <a class="nav-link" href="#">
+                            <!--Plus-->
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-plus-circle" viewBox="0 0 16 16">
                                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
@@ -120,6 +122,7 @@
                             &nbsp;&nbsp;&nbsp;Добавить дневник
                         </a>
                         <a class="nav-link" href="#">
+                            <!--Upload-->
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-upload" viewBox="0 0 16 16">
                                 <path
@@ -137,7 +140,7 @@
                 <div class="col-4">
                     <nav class="nav flex-column float-end">
                         <a class="nav-link text-end" href="#">Лист обследований</a>
-                        <a class="nav-link text-end" href="#">Лист наблюдений</a>
+                        <a class="nav-link text-end" href="observation.html">Лист наблюдений</a>
                         <a class="nav-link text-end" href="#">Лист назначений</a>
                     </nav>
                 </div>
