--- a/html/observation.html
+++ b/html/observation.html
@@ -86,6 +86,7 @@
     </div>
     <!--End of sidebar messages-->
     <main>
+
         <!--Modal temperature-->
         <div class="modal fade" id="tempModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="tempModalLabel" aria-hidden="true">
@@ -96,7 +97,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="36.6">
+                        <input type="text" class="form-control" id="tempInput" placeholder="36.6">
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
@@ -107,6 +108,36 @@
             </div>
         </div>
         <!--End of modal-->
+
+        <!--Modal blood pressure-->
+        <div class="modal fade" id="presModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="presModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="presModalLabel">Давление и пульс</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="120" aria-label="Дистола">
+                            <span class="input-group-text">/</span>
+                            <input type="text" class="form-control" placeholder="80" aria-label="Систола">
+                        </div>
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="90" aria-label="Пульс">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                        <button type="button" class="btn btn-primary" onclick="addPres()"
+                            data-bs-dismiss="modal">Добавить</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--End of modal-->
+
         <!--Temperature-->
         <div class="container">
             <div class="row">
@@ -128,24 +159,46 @@
             </div>
         </div>
         <!--End of temperature-->
+
         <!--Blood pressure-->
         <div class="container">
-            <div class="col-1">
-                <!--Plus blood pressure-->
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                        class="bi bi-plus-circle" viewBox="0 0 16 16">
-                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                        <path
-                            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
-                    </svg>
-                </a>
-            </div>
-            <div class="col-11">
-                <!--Blood pressure table-->
+            <div class="row">
+                <div class="col-1">
+                    <!--Plus blood pressure-->
+                    <a data-bs-toggle="modal" href="#presModal" role="button" aria-controls="presModal">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                            class="bi bi-plus-circle" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                            <path
+                                d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="col-11">
+                    <!--Blood pressure table-->
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">Время</th>
+                                <th scope="col"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Давление</th>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Пульс</th>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
         <!--End of blood pressure-->
+
     </main>
     <!--Script for chart-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
@@ -195,8 +248,9 @@
             }
         });
 
+        //Adding temperature
         function addTemp() {
-            var input = document.getElementById('floatingInput');
+            var input = document.getElementById('tempInput');
             var res = parseFloat(input.value);
             input.value = "";
             if (isNaN(res)) return;
@@ -205,6 +259,11 @@
                 y: res
             });
             myChart.update();
+        };
+
+        //Adding blood pressure
+        function addPres() {
+
         };
     </script>
 </body>
