--- a/html/patient.html
+++ b/html/patient.html
@@ -139,9 +139,9 @@
                 <!--Left part-->
                 <div class="col-4">
                     <nav class="nav flex-column float-end">
-                        <a class="nav-link text-end" href="#">Лист обследований</a>
+                        <a class="nav-link text-end" href="examination.html">Лист обследований</a>
                         <a class="nav-link text-end" href="observation.html">Лист наблюдений</a>
-                        <a class="nav-link text-end" href="#">Лист назначений</a>
+                        <a class="nav-link text-end" href="prescription.html">Лист назначений</a>
                     </nav>
                 </div>
                 <!--End of left part-->
