--- a/html/examination.html
+++ b/html/examination.html
@@ -143,15 +143,23 @@
                                 <td>ОАК</td>
                                 <td>12/10/2021</td>
                                 <td>13/10/2021</td>
-                                <td><a href="#">Посмотреть</a></td>
+                                <td><a href="../img/favicon.ico" target="_blank">Посмотреть</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
                                 <td>ОАМ</td>
                                 <td>12/10/2021</td>
                                 <td>13/10/2021</td>
-                                <td><a href="#">Посмотреть</a></td>
+                                <td><a href="/Users/daraanisimova/Downloads/abstract.pdf" target="_blank">Посмотреть</a>
+                                </td>
                             </tr>
+                            <!--<tr>
+                                <th scope="row">3</th>
+                                <td>Биопсия</td>
+                                <td>12/10/2021</td>
+                                <td>13/10/2021</td>
+                                <td><a href="http://docs.google.com/viewer?url={URL документа}&embedded=true" target="_blank">Посмотреть</a></td>
+                            </tr>-->
                         </tbody>
                     </table>
                 </div>
@@ -160,7 +168,7 @@
         <!--End of examination-->
 
     </main>
-    
+
 
     <script>
         //Adding examination
