--- a/html/wards.html
+++ b/html/wards.html
@@ -71,6 +71,10 @@
                     <path
                         d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z" />
                 </svg>
+                <span
+                    class="position-absolute top-0 start-100 translate-middle badge border border-danger rounded-circle bg-danger p-1">
+                    <span class="visually-hidden">unread messages</span>
+                </span>
             </div>
         </div>
     </header>
@@ -80,11 +84,36 @@
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasWithBackdrop"
         aria-labelledby="offcanvasWithBackdropLabel">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasWithBackdropLabel">Offcanvas with backdrop</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <p>.....</p>
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action border-0">
+                    <div class="d-flex w-100 justify-content-between">
+                        <!--<h5 class="mb-1">Сегодня, 3 часа назад</h5>-->
+                        <small>3 days ago</small>
+                    </div>
+                    <p class="mb-1">Готовы результаты анализов для <b>Иванов Петр Михайлович</b>!<small
+                            class="link-primary">&nbsp;&nbsp;&nbsp;Перейти...</small></p>
+
+                </a>
+                <a href="#" class="list-group-item list-group-item-action border-0">
+                    <div class="d-flex w-100 justify-content-between">
+                        <small>3 days ago</small>
+                    </div>
+                    <p class="mb-1">Готовы результаты анализов для <b>Иванов Петр Михайлович</b>!<small
+                            class="link-primary">&nbsp;&nbsp;&nbsp;Перейти...</small></p>
+
+                </a>
+                <a href="#" class="list-group-item list-group-item-action border-0">
+                    <div class="d-flex w-100 justify-content-between">
+                        <small>3 days ago</small>
+                    </div>
+                    <p class="mb-1">Готовы результаты анализов для <b>Иванов Петр Михайлович</b>!<small
+                            class="link-primary">&nbsp;&nbsp;&nbsp;Перейти...</small></p>
+
+                </a>
+            </div>
         </div>
     </div>
     <!--End of sidebar messages-->
